# hermes

./: .coveragerc  .gitignore  .gitlab-ci.yml  .trivyignore  Dockerfile  Dockerfile.hermes  Dockerfile.nginx  Pipfile  README.md  ReadMe.md  ReadMe.txt  TEST_EMAIL.html  celerybeat-schedule.db  collect-static-requirements.txt  collectstatic.sh  docker-compose.yml  entrypoint.sh  errors.py  example_channels.json  example_local_secrets.json  generate_sql_template.sh  gunicorn.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  style.sh  tox.ini
.github/workflows/: ci.yaml  prod_release.yaml  test.yaml
analytics/: README.md  __init__.py  api.py  events.py
api_messaging/: angelia_background.py  api2_background.py  exceptions.py  message_broker.py  midas_messaging.py  route.py  run.py
api_messaging/tests/: manual_test_angelia_background.py  test_angelia_background.py  test_management_command.py  test_messaging.py  test_sending_service.py
common/: admin.py  models.py  urls.py  views.py
common/tests/: test_readyz.py  test_readz.py
daedalus_messaging/: __init__.py  broker.py  broker_connect.py  message_config.py  signals.py
environment/tests/: test_env.py
hermes/: __init__.py  celery.py  channel_vault.py  channels.py  currencies.py  email_auth.py  middleware.py  pytest_runner.py  redis.py  reporting.py  runners.py  sentry.py  settings.py  spreedly.py  storage.py  tasks.py  threading.py  traced_requests.py  urls.py  version.py  visa_offers_platform.py  vop_tasks.py  wsgi.py
hermes/fixtures/: setupdb.py
hermes/tests/: test_channels.py  test_email_backend.py  test_periodic_retry.py  test_utils.py  test_vop.py
hermes/traced_db_wrapper/: base.py
history/: admin.py  apps.py  data_warehouse.py  enums.py  middleware.py  models.py  serializers.py  signals.py  tasks.py  utils.py
history/migrations/: 0001_initial.py  0002_auto_20210118_1151.py  0003_auto_20210119_1138.py  0004_historicalcustomuser.py  0005_historicalvopactivation.py  0006_auto_20210126_1524.py  0007_auto_20220201_1726.py  0008_alter_historicalcustomuser_body_and_more.py  0009_historicalcustomuser_uuid.py  0010_historicalschemeaccountentry_link_status.py
history/tests/: test_events.py  test_history.py  test_serializers.py  test_signals.py  test_tasks.py
intercom/: intercom_api.py
magic_link/: tasks.py
magic_link/tests/: test_tasks.py
mnemosyne/: api.py  events.py
notification/: stfp_connect.py  tasks.py  test_keys.txt
notification/tests/: test_notification_tasks.py
order/: serializers.py  urls.py  views.py
order/tests/: test_views.py
payment_card/: __init__.py  admin.py  apps.py  enums.py  forms.py  metis.py  models.py  payment.py  payment_card_scheme_accounts.py  serializers.py  signals.py  tasks.py  urls.py  views.py
payment_card/migrations/: 0001_initial.py  0001_squashed_0009_paymentcardaccount_is_deleted.py  0002_auto_20150917_1729.py  0002_auto_20160217_1523.py  0003_auto_20150923_1044.py  0003_auto_20160218_1616.py  0004_auto_20151016_1330.py  0004_paymentcardaccountimage.py  0005_paymentaccountimagecriteria.py  0005_paymentcardaccount_token.py  0006_auto_20151110_1130.py  0006_auto_20160413_0849.py  0007_auto_20151110_1211.py  0007_auto_20160610_1458.py  0008_auto_20151126_1341.py  0008_auto_20160610_1521.py  0009_auto_20160610_1543.py  0009_paymentcardaccount_is_deleted.py  0010_paymentcardaccount_fingerprint.py  0011_auto_20160617_1131.py  0011_auto_20160620_0833.py  0011_auto_20160620_1241.py  0012_auto_20160620_1243.py  0013_auto_20160623_0934.py  0014_auto_20160629_1542.py  0015_auto_20160715_1344.py  0016_remove_paymentcard_image.py  0017_auto_20160825_1440.py  0018_auto_20160831_1505.py  0019_auto_20160913_1248.py  0020_auto_20160916_1628.py  0021_auto_20160916_1628.py  0022_auto_20160923_1025.py  0023_auto_20161017_1512.py  0024_auto_20161026_1626.py  0025_auto_20161123_1628.py  0026_auto_20161124_1136.py  0027_auto_20161124_1138.py  0028_auto_20170112_1646.py  0029_auto_20170113_1136.py  (+59 more)
payment_card/tests/: factories.py  tests.py  (+10 more)
paymentcard/: models.py
periodic_corrections/: __init__.py  admin.py  apps.py  models.py  tasks.py
periodic_retry/: __init__.py  admin.py  apps.py  models.py  tasks.py
prometheus/: apps.py  labels.py  metrics.py  middleware.py  utils.py
prometheus_pusher/: apps.py
scheme/: __init__.py  account_status_summary.py  admin.py  apps.py  credentials.py  encryption.py  encyption.py  forms.py  mixins.py  models.py  my360endpoints.py  serializers.py  signals.py  tasks.py  urls.py  views.py  vouchers.py
scripts/: __init__.py  admin.py  apps.py  azure_files.py  enums.py  file_script_validators.py  models.py  scripts.py  vop_actions.py  vop_scripts.py
sso/: __init__.py  admin.py  apps.py  auth.py  urls.py  views.py
ubiquity/: __init__.py  admin.py  apps.py  authentication.py  cache_decorators.py  censor_empty_fields.py  censure_empty_fields.py  channel_vault.py  exceptions.py  influx_audit.py  middleware.py  models.py  reason_codes.py  serializers.py  tasks.py  urls.py  utils.py  versions.py  views.py
user/: admin.py  authentication.py  authenticators.py  exceptions.py  forms.py  managers.py  models.py  password_validators.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py
(+542 files in other folders)
